# Max-MSP-RNBO-CPP-Miniaudio

./: .gitignore  CMakeLists.txt  README.md  description.json  main.cpp  simplesine.cpp
